--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
             padding: 20px;
 			
 		.music-box {
-			background-color: #e0e0e0;   /* gray box */
-			border: 2px solid #555;      /* dark gray border */
+			background-color: #e0e0e0;   
+			border: 2px solid #555;      
 			border-radius: 20px;
 			padding: 15px;
 			max-width: 400px;
-			margin: 30px auto;           /* center */
+			margin: 30px auto;           
 			text-align: center;
 		}
 
 		.music-title {
-			color: #444;                 /* dark gray text */
+			color: #444;                 
 			font-weight: bold;
 			margin-bottom: 10px;
 		}
@@ -140,12 +140,13 @@
     </div>
 	
 	<div class="music">
-		<audio src="S1.MP3" autoplay loop></audio>	
+		<audio controls autoplay>
+  <source src="S1.mp3" type="audio/ogg">	
 </div>
 </section>
 
 <script>
-Function start () {
+Function refresh () {
 alert ("welcome to my website") ; }
 </script>
 
