--- a/Biodata.html
+++ b/Biodata.html
@@ -99,7 +99,7 @@
 			font-size: 1.8rem;
 		}
 
-		/* Susunan melintang */
+		
 		.music-row {
 			display: flex;
 			gap: 35px;              
@@ -108,7 +108,7 @@
 			margin-top: 50px;
 		}
 
-		/* BOX SETIAP VIDEO */
+		
 		.video-box {
 			background: #3a3a3a;
 			padding: 18px;
@@ -116,19 +116,19 @@
 			box-shadow: 0 8px 18px rgba(0,0,0,0.4);
 		}
 
-		/* VIDEO POTRAIT */
+		
 		.video-box video {
 			width: 300px;     
 			height: 540px;    
 			object-fit: cover;
 			border-radius: 14px;
 		}
-		/* Pop-up effect */
+		
 		.main-box:hover {
 			transform: translateY(-15px);
 			box-shadow: 0 15px 25px rgba(0,0,0,0.2);
 		}
-		/* BOX SETIAP VIDEO */
+		
 		.video-box {
 			background: #3a3a3a;
 			padding: 18px;
@@ -136,14 +136,14 @@
 			box-shadow: 0 8px 18px rgba(0,0,0,0.4);
 		}
 
-		/* VIDEO POTRAIT */
+		
 		.video-box video {
 			width: 300px;     
 			height: 540px;    
 			object-fit: cover;
 			border-radius: 14px;
 		}
-		/* BOX SETIAP VIDEO */
+		
 		.video-box {
 			background: #3a3a3a;
 			padding: 18px;
@@ -152,13 +152,13 @@
 			transition: transform 0.3s, box-shadow 0.3s;
 		}
 
-		/* POP-UP EFFECT */
+		
 		.video-box:hover {
 			transform: translateY(-15px);
 			box-shadow: 0 15px 25px rgba(0,0,0,0.5);
 		}
 
-		/* VIDEO POTRAIT BESAR */
+		
 		.video-box video {
 			width: 300px;
 			height: 540px;
@@ -222,7 +222,7 @@
 <div class="music-row">
     <div class="video-box">
         <video controls loop>
-            <source src="V1.mp4" type="video/mp4">
+            <source src="V6.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -240,17 +240,20 @@
 
     <div class="video-box">
         <video controls loop>
-            <source src="V4.mp4" type="video/mp4">
+            <source src="V7.mp4" type="video/mp4">
         </video>
     </div>
 
     <div class="video-box">
         <video controls loop>
-            <source src="V5.mp4" type="video/mp4">
+            <source src="V8.mp4" type="video/mp4">
         </video>
     </div>
 </div>
-
+<div class="music">
+		<audio controls autoplay>
+  <source src="S1.mp3" type="audio/ogg">	
+</div>
 </section>
 
     <!-- Footer -->
