--- a/Contact.html
+++ b/Contact.html
@@ -95,14 +95,14 @@
             color: #777B7E;
         }
 		.centered-form {
-			max-width: 500px;          /* width form */
-			margin: 0 auto;            /* center horizontally */
-			padding: 20px;             /* ruang dalam form */
+			max-width: 500px;        
+			margin: 0 auto;            
+			padding: 20px;             
 			background-color: lightgray;
 			color: gray;
 			border-radius: 8px;
-			box-shadow: 0 4px 10px rgba(0,0,0,0.2); /* optional, cantik sikit */
-			text-align: center;        /* center labels & buttons */
+			box-shadow: 0 4px 10px rgba(0,0,0,0.2); 
+			text-align: center;       
 		}
 
 		.centered-form input[type="text"],
@@ -219,7 +219,8 @@
 	<input type="Reset">
 </form>
 <div class="music">
-		<audio src="S1.MP3" autoplay loop></audio>	
+		<audio controls autoplay>
+  <source src="S1.mp3" type="audio/ogg">	
 </div>
     </section>
 <script>
