--- a/Gallery.html
+++ b/Gallery.html
@@ -145,7 +145,8 @@
         </div>
     </section>
 <div class="music">
-		<audio src="S1.MP3" autoplay loop></audio>	
+		<audio controls autoplay>
+  <source src="S1.mp3" type="audio/ogg" style="color:pewter; text-align: center;">	
 </div>
     </section>
     <!-- Footer -->
