--- a/Family.html
+++ b/Family.html
@@ -73,21 +73,21 @@
        .family-grid {
 			display: flex;
 			flex-wrap: wrap;
-			justify-content: center; /* centers all images */
+			justify-content: center; 
 			gap: 20px;
 		}
 
        .family-member {
-			text-align: center; /* centers caption under image */
+			text-align: center; 
 		}
 
 
         .family-member img {
 			width: 200px;
-			height: 260px; /* Portrait size */
+			height: 260px; 
 			object-fit: cover;
 			border-radius: 12px;
-			border: 3px solid #d3d3d3; /* light gray */
+			border: 3px solid #d3d3d3; 
 			transition: transform 0.3s;
 		}
 
@@ -112,31 +112,6 @@
             text-align: center;
             padding: 20px;
         }
-		.music-box {
-			background-color: #e0e0e0;   /* gray box */
-			border: 2px solid #555;      /* dark gray border */
-			border-radius: 20px;
-			padding: 15px;
-			max-width: 400px;
-			margin: 30px auto;           /* center */
-			text-align: center;
-		}
-
-		.music-title {
-			color: #444;                 /* dark gray text */
-			font-weight: bold;
-			margin-bottom: 10px;
-		}
-		.music-box {
-			box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-		}
-		.music-box {
-			position: fixed;
-			bottom: 20px;
-			right: 20px;
-		}
-
-        
 
         @media (max-width: 768px) {
             nav ul {
@@ -195,7 +170,8 @@
     </div>
 </section>
 <div class="music">
-		<audio src="S1.MP3" autoplay loop></audio>	
+		<audio controls autoplay>
+  <source src="S1.mp3" type="audio/ogg">	
 </div>
     </section>
     <!-- Footer -->
